js series y peli

--- a/FilmCity/peliculas.html
+++ b/FilmCity/peliculas.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peliculas</title>
+    <link rel="stylesheet" href="./estilos/estilos.css">
+    <script src="JS/peliculas.js" defer></script>
 </head>
 <body>
     <!--HEADER-->
@@ -12,8 +14,25 @@
     </header>
 
     <!--PELICULAS-->
-    <section>
+    <section class="peliculas">
+        <div class="peliculas_menu">
+            <div class="peliculas_menu_caja">
+                <div class="peliculas_titulo">
+                    <p>Peliculas</p>
+                </div>
+                <div class="peliculas_select">
+                    <select name="" id="">
+                        <option value="Generos">Todos los generos</option>
+                        <option value="Drama">Drama</option>
+                        <option value="Comedia">Comedia</option>
+                        <option value="Accion">Accion</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div class="peliculas_catalogo">
 
+        </div>
     </section>
 
     <!--FOOTER-->
