Header casi hecho

--- a/FilmCity/detalles_series.html
+++ b/FilmCity/detalles_series.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Detalles Series</title>
-    <link rel="stylesheet" href="estilos/variables/variables.scss" />
+    <link rel="stylesheet" href="estilos/estilos.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="titulo"><h3>FILMCITY</h3></div>
+      <div class="secciones">
+        <p><strong>Inicio</strong></p>
+        <p>Películas</p>
+        <p>Series</p>
+        <p>Documentales</p>
+      </div>
+      <div class="perfil">
+        <img src="" alt="" /><img
+          class="menu"
+          src="multimedia/imagenes/logotipoMenu.png"
+          alt=""
+        /><img class="user" src="multimedia/imagenes/fotoPerfil.jpg" alt="" />
+      </div>
+    </header>
+    <footer></footer>
+  </body>
 </html>
