--- a/FilmCity/peliculas.html
+++ b/FilmCity/peliculas.html
@@ -21,11 +21,11 @@
                     <p>Peliculas</p>
                 </div>
                 <div class="peliculas_select">
-                    <select name="" id="">
-                        <option value="Generos">Todos los generos</option>
-                        <option value="Drama">Drama</option>
-                        <option value="Comedia">Comedia</option>
-                        <option value="Accion">Accion</option>
+                    <select name="" id="" class="select_genero">
+                        <option value="Generos" class="options_select">Todos los generos</option>
+                        <option value="Drama" class="options">Drama</option>
+                        <option value="Comedia" class="options">Comedia</option>
+                        <option value="Accion" class="options">Accion</option>
                     </select>
                 </div>
             </div>
