--- a/FilmCity/peliculas.html
+++ b/FilmCity/peliculas.html
@@ -22,16 +22,15 @@
                 </div>
                 <div class="peliculas_select">
                     <select name="" id="" class="select_genero">
-                        <option value="Generos" class="options_select">Todos los generos</option>
-                        <option value="Drama" class="options">Drama</option>
-                        <option value="Comedia" class="options">Comedia</option>
-                        <option value="Accion" class="options">Accion</option>
+                        <option value="Generos" class="options_select" style="font-family: Poppins, serif;">Todos los generos</option>
+                        <option value="Drama" class="options" style="font-family: Poppins, serif;">Drama</option>
+                        <option value="Comedia" class="options" style="font-family: Poppins, serif;">Comedia</option>
+                        <option value="Accion" class="options" style="font-family: Poppins, serif;">Accion</option>
                     </select>
                 </div>
             </div>
         </div>
         <div class="peliculas_catalogo">
-
         </div>
     </section>
 
