--- a/FilmCity/series.html
+++ b/FilmCity/series.html
@@ -13,9 +13,25 @@
         
     </header>
 
-    <!--PELICULAS-->
-    <section>
-
+    <!--SERIES-->
+    <section class="series">
+        <div class="series_menu">
+            <div class="series_menu_caja">
+                <div class="series_titulo">
+                    <p>Peliculas</p>
+                </div>
+                <div class="series_select">
+                    <select name="" id="" class="select_genero">
+                        <option value="Generos" class="options_select" style="font-family: Poppins, serif;">Todos los generos</option>
+                        <option value="Drama" class="options" style="font-family: Poppins, serif;">Drama</option>
+                        <option value="Comedia" class="options" style="font-family: Poppins, serif;">Comedia</option>
+                        <option value="Accion" class="options" style="font-family: Poppins, serif;">Accion</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div class="series_catalogo">
+        </div>
     </section>
 
     <!--FOOTER-->
