Header y Footer finish

--- a/FilmCity/detalles_series.html
+++ b/FilmCity/detalles_series.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Detalles Series</title>
     <link rel="stylesheet" href="estilos/estilos.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
   </head>
   <body>
     <header>
       <div class="titulo"><h3>FILMCITY</h3></div>
+      <i class="desplegable bi bi-list"></i>
       <div class="secciones">
         <p><strong>Inicio</strong></p>
         <p>Películas</p>
@@ -16,13 +21,58 @@
         <p>Documentales</p>
       </div>
       <div class="perfil">
-        <img src="" alt="" /><img
+        <i class="lupa bi bi-search"></i>
+        <img
           class="menu"
           src="multimedia/imagenes/logotipoMenu.png"
           alt=""
         /><img class="user" src="multimedia/imagenes/fotoPerfil.jpg" alt="" />
       </div>
     </header>
-    <footer></footer>
+
+    <footer>
+      <div class="redes">
+        <i class="bi bi-instagram"></i>
+        <i class="bi bi-twitter-x"></i>
+        <i class="bi bi-tiktok"></i>
+        <i class="bi bi-youtube"></i>
+      </div>
+      <div class="enlaces">
+        <hr />
+        <div class="columna">
+          <p>Preguntas frecuentes</p>
+          <p>Inversores</p>
+          <p>Formas de ver</p>
+          <p>Avisos legales</p>
+        </div>
+        <hr />
+        <div class="columna">
+          <p>Centro de ayuda</p>
+          <p>Empleo</p>
+          <p>Terminos de uso</p>
+        </div>
+        <hr />
+        <div class="columna">
+          <p>Cuenta</p>
+          <p>Solo en FilmCity</p>
+          <p>Garantía legal</p>
+        </div>
+        <hr />
+        <div class="columna">
+          <p>Informacion corporativa</p>
+          <p>Zona de prensa</p>
+          <p>Privacidad</p>
+          <p>Anuncios</p>
+        </div>
+      </div>
+      <div class="titulo"><h3>FILMCITY</h3></div>
+    </footer>
+    <hr />
+    <div class="copy">
+      <p>
+        &copy; 2025 FILMCITY S.A. Todos los derechos reservados. <br />
+        Diseñado y maquetado por el equipo de FilmCity.
+      </p>
+    </div>
   </body>
 </html>
