--- a/FilmCity/detalles_series.html
+++ b/FilmCity/detalles_series.html
@@ -9,10 +9,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    <script src="JS/detalles-series.js" defer></script>
   </head>
   <body>
     <header>
-      <div class="titulo"><h3>FILMCITY</h3></div>
+      <!-- <div class="titulo"><h3>FILMCITY</h3></div>
       <i class="desplegable bi bi-list"></i>
       <div class="secciones">
         <p><strong>Inicio</strong></p>
@@ -27,11 +28,35 @@
           src="multimedia/imagenes/logotipoMenu.png"
           alt=""
         /><img class="user" src="multimedia/imagenes/fotoPerfil.jpg" alt="" />
-      </div>
+      </div> -->
     </header>
 
+    <!--BANNER SERIE-->
+    <section class="banner">
+
+    </section>
+
+    <!--CAPITULOS SERIE-->
+    <section class="capitulos">
+      <div class="temporadas">
+        <select id="temporadas_serie" class="temporadas_serie">
+          <option value="0" style="font-weight: bold;">Selecciona una temporada</option>
+        </select>
+      </div>
+      <div class="capitulos">
+        <!--576px-768px-->
+        <div class="capitulos_pequeños" id="capitulos_pequeños">
+
+        </div>
+        <!--992px-1200px-->
+        <div class="capitulos_grandes">
+
+        </div>
+      </div>
+    </section>
+
     <footer>
-      <div class="redes">
+      <!-- <div class="redes">
         <i class="bi bi-instagram"></i>
         <i class="bi bi-twitter-x"></i>
         <i class="bi bi-tiktok"></i>
@@ -73,6 +98,6 @@
         &copy; 2025 FILMCITY S.A. Todos los derechos reservados. <br />
         Diseñado y maquetado por el equipo de FilmCity.
       </p>
-    </div>
+    </div> -->
   </body>
 </html>
