--- a/FilmCity/home.html
+++ b/FilmCity/home.html
@@ -26,21 +26,24 @@
   <body>
     <!-- Aqui va el HEADER -->
     <header>
-      <div class="titulo"><h3>FILMCITY</h3></div>
+      <div class="titulo"><a href="">FILMCITY</a></div>
       <i class="desplegable bi bi-list"></i>
       <div class="secciones">
-        <p><strong>Inicio</strong></p>
-        <p>Películas</p>
-        <p>Series</p>
-        <p>Documentales</p>
+        <a href="#"><b>Inicio</b></a>
+        <a href="peliculas.html">Peliculas</a>
+        <a href="series.html">Series</a>
+        <a href="#">Documentales</a>
       </div>
       <div class="perfil">
-        <i class="lupa bi bi-search"></i>
-        <img
-          class="menu"
-          src="multimedia/imagenes/logotipoMenu.png"
-          alt=""
-        /><img class="user" src="multimedia/imagenes/fotoPerfil.jpg" alt="" />
+        <a href="#"><i class="lupa bi bi-search"></i></a>
+        <a href="#"
+          ><img
+            class="menu"
+            src="multimedia/imagenes/logotipoMenu.png"
+            alt="" /></a
+        ><a href="#"
+          ><img class="user" src="multimedia/imagenes/fotoPerfil.jpg" alt=""
+        /></a>
       </div>
     </header>
 
@@ -222,39 +225,41 @@
       <div class="enlaces">
         <hr />
         <div class="columna">
-          <p>Preguntas frecuentes</p>
-          <p>Inversores</p>
-          <p>Formas de ver</p>
-          <p>Avisos legales</p>
+          <a href="#">Preguntas frecuentes</a>
+          <a href="#">Inversores</a>
+          <a href="#">Formas de ver</a>
+          <a href="#">Avisos legales</a>
         </div>
         <hr />
         <div class="columna">
-          <p>Centro de ayuda</p>
-          <p>Empleo</p>
-          <p>Terminos de uso</p>
+          <a href="#">Centro de ayuda</a>
+          <a href="#">Empleo</a>
+          <a href="#">Terminos de uso</a>
         </div>
         <hr />
         <div class="columna">
-          <p>Cuenta</p>
-          <p>Solo en FilmCity</p>
-          <p>Garantía legal</p>
+          <a href="#">Cuenta</a>
+          <a href="#">Solo en FilmCity</a>
+          <a href="#">Garantía legal</a>
         </div>
         <hr />
         <div class="columna">
-          <p>Informacion corporativa</p>
-          <p>Zona de prensa</p>
-          <p>Privacidad</p>
-          <p>Anuncios</p>
+          <a href="#">Informacion corporativa</a>
+          <a href="#">Zona de prensa</a>
+          <a href="#">Privacidad</a>
+          <a href="#">Anuncios</a>
         </div>
       </div>
-      <div class="titulo"><h3>FILMCITY</h3></div>
+      <div class="titulo">
+        <a href="#">FILMCITY</a>
+      </div>
+
+      <div class="copy">
+        <p>
+          &copy; 2025 FILMCITY S.A. Todos los derechos reservados. <br />
+          Diseñado y maquetado por el equipo de FilmCity.
+        </p>
+      </div>
     </footer>
-    <hr />
-    <div class="copy">
-      <p>
-        &copy; 2025 FILMCITY S.A. Todos los derechos reservados. <br />
-        Diseñado y maquetado por el equipo de FilmCity.
-      </p>
-    </div>
   </body>
 </html>
