--- a/FilmCity/detalles_peliculas.html
+++ b/FilmCity/detalles_peliculas.html
@@ -45,12 +45,7 @@
         Tierra Media del Señor Oscuro Sauron.
       </div>
       <div class="trailerDetalles">
-        <video
-          src="multimedia/video/AnillosDetalles.mp4"
-          autoplay
-          loop
-          muted
-        ></video>
+        <video src="multimedia/video/demo.mp4" autoplay loop muted></video>
       </div>
       <div class="masDetalles">
         <p>IMBd 8,9</p>
@@ -66,7 +61,7 @@
         <i class="bi bi-play-fill bg-secondary"></i> Ver ahora
       </button>
       <div class="botones">
-        <i class="bi bi-plus-circle"></i>
+        <i class="bi bi-plus-circle mas"></i>
         <div class="circulo">
           <i class="bi bi-hand-thumbs-up rounded-circle"></i>
         </div>
@@ -86,6 +81,12 @@
         <div id="reparto"></div>
         <div id="audio"></div>
       </div>
+    </div>
+
+    <div class="relacionado_pelicula">
+      <h3>Relacionado</h3>
+      <h4>Recomendados para ti</h4>
+      <div id="peliculas"></div>
     </div>
 
     <footer>
