--- a/FilmCity/series.html
+++ b/FilmCity/series.html
@@ -39,7 +39,7 @@
     <div class="series_menu">
       <div class="series_menu_caja">
         <div class="series_titulo">
-          <p>Peliculas</p>
+          <p>Series</p>
         </div>
         <div class="series_select">
           <select name="" id="" class="select_genero">
