--- a/FilmCity/detalles_series.html
+++ b/FilmCity/detalles_series.html
@@ -1,103 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Detalles Series</title>
-    <link rel="stylesheet" href="estilos/estilos.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
-    <script src="JS/detalles-series.js" defer></script>
-  </head>
-  <body>
-    <header>
-      <!-- <div class="titulo"><h3>FILMCITY</h3></div>
-      <i class="desplegable bi bi-list"></i>
-      <div class="secciones">
-        <p><strong>Inicio</strong></p>
-        <p>Películas</p>
-        <p>Series</p>
-        <p>Documentales</p>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Detalles Series</title>
+  <link rel="stylesheet" href="estilos/estilos.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+  <script src="JS/detalles-series.js" defer></script>
+</head>
+
+<body>
+  <!--HEADER-->
+  <header>
+    <div class="titulo"><a href="">FILMCITY</a></div>
+    <i class="desplegable bi bi-list"></i>
+    <div class="secciones">
+      <a href="home.html">Inicio</a>
+      <a href="#"><b>Peliculas</b></a>
+      <a href="series.html">Series</a>
+      <a href="#">Documentales</a>
+    </div>
+    <div class="perfil">
+      <a href="#"><i class="lupa bi bi-search"></i></a>
+      <a href="#">
+        <img class="menu" src="multimedia/imagenes/logotipoMenu.png" alt="" /></a><a href="#"><img class="user"
+          src="multimedia/imagenes/fotoPerfil.jpg" alt="" /></a>
+    </div>
+  </header>
+
+  <!--BANNER SERIE-->
+  <section class="banner">
+
+  </section>
+
+  <!--CAPITULOS SERIE-->
+  <section class="capitulos">
+    <div class="temporadas">
+      <select id="temporadas_serie" class="temporadas_serie">
+        <option value="0">Selecciona una temporada</option>
+      </select>
+    </div>
+    <div class="capitulos">
+      <!--576px-768px-->
+      <div class="capitulos_pequeños" id="capitulos_pequeños">
       </div>
-      <div class="perfil">
-        <i class="lupa bi bi-search"></i>
-        <img
-          class="menu"
-          src="multimedia/imagenes/logotipoMenu.png"
-          alt=""
-        /><img class="user" src="multimedia/imagenes/fotoPerfil.jpg" alt="" />
-      </div> -->
-    </header>
-
-    <!--BANNER SERIE-->
-    <section class="banner">
-
-    </section>
-
-    <!--CAPITULOS SERIE-->
-    <section class="capitulos">
-      <div class="temporadas">
-        <select id="temporadas_serie" class="temporadas_serie">
-          <option value="0" style="font-weight: bold;">Selecciona una temporada</option>
-        </select>
+      <!--992px-1200px-->
+      <div class="capitulos_grandes" id="capitulos_grandes">
       </div>
-      <div class="capitulos">
-        <!--576px-768px-->
-        <div class="capitulos_pequeños" id="capitulos_pequeños">
+    </div>
+  </section>
 
-        </div>
-        <!--992px-1200px-->
-        <div class="capitulos_grandes">
+  <!--FOOTER-->
+  <footer>
+    <div class="redes">
+      <i class="bi bi-instagram"></i>
+      <i class="bi bi-twitter-x"></i>
+      <i class="bi bi-tiktok"></i>
+      <i class="bi bi-youtube"></i>
+    </div>
+    <div class="enlaces">
+      <hr />
+      <div class="columna">
+        <a href="#">Preguntas frecuentes</a>
+        <a href="#">Inversores</a>
+        <a href="#">Formas de ver</a>
+        <a href="#">Avisos legales</a>
+      </div>
+      <hr />
+      <div class="columna">
+        <a href="#">Centro de ayuda</a>
+        <a href="#">Empleo</a>
+        <a href="#">Terminos de uso</a>
+      </div>
+      <hr />
+      <div class="columna">
+        <a href="#">Cuenta</a>
+        <a href="#">Solo en FilmCity</a>
+        <a href="#">Garantía legal</a>
+      </div>
+      <hr />
+      <div class="columna">
+        <a href="#">Informacion corporativa</a>
+        <a href="#">Zona de prensa</a>
+        <a href="#">Privacidad</a>
+        <a href="#">Anuncios</a>
+      </div>
+    </div>
+    <div class="titulo">
+      <a href="#">FILMCITY</a>
+    </div>
 
-        </div>
-      </div>
-    </section>
-
-    <footer>
-      <!-- <div class="redes">
-        <i class="bi bi-instagram"></i>
-        <i class="bi bi-twitter-x"></i>
-        <i class="bi bi-tiktok"></i>
-        <i class="bi bi-youtube"></i>
-      </div>
-      <div class="enlaces">
-        <hr />
-        <div class="columna">
-          <p>Preguntas frecuentes</p>
-          <p>Inversores</p>
-          <p>Formas de ver</p>
-          <p>Avisos legales</p>
-        </div>
-        <hr />
-        <div class="columna">
-          <p>Centro de ayuda</p>
-          <p>Empleo</p>
-          <p>Terminos de uso</p>
-        </div>
-        <hr />
-        <div class="columna">
-          <p>Cuenta</p>
-          <p>Solo en FilmCity</p>
-          <p>Garantía legal</p>
-        </div>
-        <hr />
-        <div class="columna">
-          <p>Informacion corporativa</p>
-          <p>Zona de prensa</p>
-          <p>Privacidad</p>
-          <p>Anuncios</p>
-        </div>
-      </div>
-      <div class="titulo"><h3>FILMCITY</h3></div>
-    </footer>
-    <hr />
     <div class="copy">
       <p>
         &copy; 2025 FILMCITY S.A. Todos los derechos reservados. <br />
         Diseñado y maquetado por el equipo de FilmCity.
       </p>
-    </div> -->
-  </body>
+    </div>
+</body>
+
 </html>
