--- a/FilmCity/detalles_peliculas.html
+++ b/FilmCity/detalles_peliculas.html
@@ -74,7 +74,10 @@
     </div>
 
     <div class="detalle_pelicula">
-      <h3>Detalles</h3>
+      <div>
+
+        <h3>Detalles</h3>
+      </div>
 
       <div id="sinopsis"></div>
       <div class="reparto-audio">
