--- a/FilmCity/detalles_series.html
+++ b/FilmCity/detalles_series.html
@@ -17,7 +17,7 @@
     <i class="desplegable bi bi-list"></i>
     <div class="secciones">
       <a href="home.html">Inicio</a>
-      <a href="#"><b>Peliculas</b></a>
+      <a href="peliculas.html"><b>Peliculas</b></a>
       <a href="series.html">Series</a>
       <a href="#">Documentales</a>
     </div>
