--- a/FilmCity/detalles_series.html
+++ b/FilmCity/detalles_series.html
@@ -13,7 +13,7 @@
 <body>
   <!--HEADER-->
   <header>
-    <div class="titulo"><a href="">FILMCITY</a></div>
+    <div class="titulo"><a href="home.html">FILMCITY</a></div>
     <i class="desplegable bi bi-list"></i>
     <div class="secciones">
       <a href="home.html">Inicio</a>
@@ -31,7 +31,9 @@
 
   <!--BANNER SERIE-->
   <section class="banner">
-
+    <div>
+      <img src="multimedia/imagenes/losoprano.jpeg" alt="">
+    </div>
   </section>
 
   <!--CAPITULOS SERIE-->
