--- a/FilmCity/home.html
+++ b/FilmCity/home.html
@@ -26,10 +26,10 @@
   <body>
     <!-- Aqui va el HEADER -->
     <header>
-      <div class="titulo"><a href="">FILMCITY</a></div>
+      <div class="titulo"><a href="home.html">FILMCITY</a></div>
       <i class="desplegable bi bi-list"></i>
       <div class="secciones">
-        <a href="#"><b>Inicio</b></a>
+        <a href="home.html"><b>Inicio</b></a>
         <a href="peliculas.html">Peliculas</a>
         <a href="series.html">Series</a>
         <a href="#">Documentales</a>
