--- a/FilmCity/series.html
+++ b/FilmCity/series.html
@@ -19,7 +19,7 @@
 <body>
   <!--HEADER-->
   <header>
-    <div class="titulo"><a href="">FILMCITY</a></div>
+    <div class="titulo"><a href="home.html">FILMCITY</a></div>
     <i class="desplegable bi bi-list"></i>
     <div class="secciones">
       <a href="home.html">Inicio</a>
