--- a/FilmCity/peliculas.html
+++ b/FilmCity/peliculas.html
@@ -19,11 +19,11 @@
 <body>
   <!--HEADER-->
   <header>
-    <div class="titulo"><a href="">FILMCITY</a></div>
+    <div class="titulo"><a href="home.html">FILMCITY</a></div>
     <i class="desplegable bi bi-list"></i>
     <div class="secciones">
       <a href="home.html">Inicio</a>
-      <a href="#"><b>Peliculas</b></a>
+      <a href="peliculas.html"><b>Peliculas</b></a>
       <a href="series.html">Series</a>
       <a href="#">Documentales</a>
     </div>
