nuevos camb7ios viernes

--- a/FilmCity/detalles_peliculas.html
+++ b/FilmCity/detalles_peliculas.html
@@ -57,9 +57,9 @@
           <li>Onírica</li>
         </ul>
       </div>
-      <button class="verAhora">
+      <a href="reproductor_peliculas.html" class="verAhora">
         <i class="bi bi-play-fill bg-secondary"></i> Ver ahora
-      </button>
+      </a>
       <div class="botones">
         <i class="bi bi-plus-circle mas"></i>
         <div class="circulo">
@@ -74,10 +74,7 @@
     </div>
 
     <div class="detalle_pelicula">
-      <div>
-
-        <h3>Detalles</h3>
-      </div>
+      <h3>Detalles</h3>
 
       <div id="sinopsis"></div>
       <div class="reparto-audio">
