--- a/FilmCity/home.html
+++ b/FilmCity/home.html
@@ -80,9 +80,9 @@
               mundo mágico.
             </p>
             <div class="btn-container">
-              <button class="btn-netflix">
+              <a href="reproductor_peliculas.html" class="btn-netflix">
                 <i class="bi bi-play-fill"></i> Ver ahora
-              </button>
+              </a>
               <button class="btn-plus">
                 <i class="bi bi-plus-lg"></i>
               </button>
