--- a/FilmCity/detalles_series.html
+++ b/FilmCity/detalles_series.html
@@ -31,8 +31,11 @@
 
   <!--BANNER SERIE-->
   <section class="banner">
-    <div>
+    <div class="banner_serie">
       <img src="multimedia/imagenes/losoprano.jpeg" alt="">
+    </div>
+    <div class="logo_pelicula">
+      <img src="multimedia/imagenes/sopranologo.png" alt="" />
     </div>
   </section>
 
