--- a/FilmCity/detalles_series.html
+++ b/FilmCity/detalles_series.html
@@ -37,6 +37,36 @@
     <div class="logo_pelicula">
       <img src="multimedia/imagenes/sopranologo.png" alt="" />
     </div>
+    <div class="detalles_serie">
+      <div class="boton_serie">
+        <a href="reproductor_series.html" class="verAhora">
+          <i class="bi bi-play-fill bg-secondary"></i>Ver T1 E1
+        </a>
+      </div>
+      <div class="botones_serie">
+        <div class="plus">
+          <i class="bi bi-plus-circle mas"></i>
+        </div>
+        <div class="circulo">
+          <i class="bi bi-hand-thumbs-up rounded-circle"></i>
+        </div>
+        <div class="circulo">
+          <i class="bi bi-hand-thumbs-down rounded-circle"></i>
+        </div>
+        <div class="circulo">
+          <i class="bi bi-download"></i>
+        </div>
+        <div class="circulo">
+          <i class="bi bi-share"></i>
+        </div>
+      </div>
+      <div class="descripcion_serie">
+        <p>Tony Soprano is a man torn between two worlds. As the leader of the North Jersey DiMeo Crime Family, he is a
+          powerful and ruthless figure in the criminal underworld, but he also faces deep emotional and psychological
+          challenges. Tony seeks therapy with Dr. Jennifer Melfi, a psychiatrist, in an effort to deal with the stress
+          of his dual life.</p>
+      </div>
+    </div>
   </section>
 
   <!--CAPITULOS SERIE-->
