filtrar series y peliculas

--- a/FilmCity/peliculas.html
+++ b/FilmCity/peliculas.html
@@ -43,8 +43,8 @@
           <p>Peliculas</p>
         </div>
         <div class="peliculas_select">
-          <select name="" id="" class="select_genero">
-            <option value="Generos" class="options_select" style="font-family: Poppins, serif">
+          <select name="" id="select_genero" class="select_genero">
+            <option value="Generos" class="options" style="font-family: Poppins, serif">
               Todos los generos
             </option>
             <option value="Drama" class="options" style="font-family: Poppins, serif">
