--- a/FilmCity/series.html
+++ b/FilmCity/series.html
@@ -42,8 +42,8 @@
           <p>Series</p>
         </div>
         <div class="series_select">
-          <select name="" id="" class="select_genero">
-            <option value="Generos" class="options_select" style="font-family: Poppins, serif">
+          <select name="" id="select_genero" class="select_genero">
+            <option value="Generos" class="options" style="font-family: Poppins, serif">
               Todos los generos
             </option>
             <option value="Drama" class="options" style="font-family: Poppins, serif">
